--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <title>API NARUTO </title>
 </head>
-<body onload="message()">
+<body>
 
     <section>
             <nav>
