Each character can now be access through village link

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,9 +12,9 @@
 
     <section>
             <nav>
-                <a id="konoha">Konoha</a>
-                <a id="suna">Suna</a>
-                <a id="kumo">Kumo</a>
+                <a class="village" href="./konoha.html?village=Konoha"  id="konoha">Konoha</a>
+                <a class="village" href="./suna.html?village=Suna" id="suna">Suna</a>
+                <a class="village" href="./kumo.html?village=Kumo" id="kumo">Kumo</a>
             </nav>
     </section>
     
