Rewriting some code and adding music on each village characters

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="./css/main.css">
     <title>API NARUTO </title>
 </head>
-<body>
-
+<body">
+<audio id="myAudio" autoplay>
+    <source src="./music/Naruto Shippuden OST 1 - Track 26 - Keisei Gyakuten ( Reverse Situation ).mp3" type="audio/mp3">
+</audio>
     <section>
             <nav>
                 <a class="village" href="./konoha.html?village=Konoha"  id="konoha">Konoha</a>
