--- a/frontend/konoha.html
+++ b/frontend/konoha.html
@@ -10,7 +10,9 @@
     <title>API NARUTO - Konoha </title>
 </head>
 <body>
-
+    <audio id="myAudio" autoplay>
+        <source src="./music//Naruto Ost 2-Daylight Of Konoha.mp3" type="audio/mp3">
+    </audio>
     <section>
             <nav>
                 <a class="village" href="./konoha.html?village=Konoha"  id="konoha">Konoha</a>
