--- a/frontend/kumo.html
+++ b/frontend/kumo.html
@@ -10,7 +10,9 @@
     <title>API NARUTO - Kumo </title>
 </head>
 <body>
-
+    <audio id="myAudio" autoplay>
+        <source src="./music/Naruto Shippuden Unreleased OST - Killer Bees theme (Remasterizado).mp3" type="audio/mp3">
+    </audio>
     <section>
             <nav>
                 <a class="village" href="./konoha.html?village=Konoha"  id="konoha">Konoha</a>
