--- a/frontend/suna.html
+++ b/frontend/suna.html
@@ -10,7 +10,9 @@
     <title>API NARUTO - Suna </title>
 </head>
 <body>
-
+    <audio id="myAudio" autoplay>
+        <source src="./music/Naruto Gekitō Ninja Taisen! 4 - Suna (Theme of the Hidden Sand Village) [1080p].mp3" type="audio/mp3">
+    </audio>
     <section>
             <nav>
                 <a class="village" href="./konoha.html?village=Konoha"  id="konoha">Konoha</a>
