--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,9 +14,10 @@
 </audio>
     <section>
             <nav>
+                <a class="village" href="./create.html" id="create">Add Character</a>
                 <a class="village" href="./konoha.html?village=Konoha"  id="konoha">Konoha</a>
-                <a class="village" href="./suna.html?village=Suna" id="suna">Suna</a>
                 <a class="village" href="./kumo.html?village=Kumo" id="kumo">Kumo</a>
+                <a class="village" href="./suna.html?village=Suna" id="suna">Suna</a>
             </nav>
     </section>
     
