--- a/frontend/create.html
+++ b/frontend/create.html
@@ -16,13 +16,18 @@
     <section>
             <nav>
                 <a class="village" href="./create.html" id="create">Add Character</a>
-                <a class="village" href="./konoha.html?village=Konoha"  id="konoha">Konoha</a>
-                <a class="village" href="./kumo.html?village=Kumo" id="kumo">Kumo</a>
-                <a class="village" href="./suna.html?village=Suna" id="suna">Suna</a>
+                <a class="village" href="./konoha.html?village=konoha"  id="konoha">Konoha</a>
+                <a class="village" href="./kumo.html?village=kumo" id="kumo">Kumo</a>
+                <a class="village" href="./suna.html?village=suna" id="suna">Suna</a>
             </nav>
     </section>
   
     <div class="container">
+
+        <a id="back" href="index.html">
+            <i class="fa-solid fa-arrow-left-long"></i>
+        </a>
+        
        <form action ="/api/personnages" method="post" enctype="multipart/form-data">
 
         <!-- NAME -->
