--- a/frontend/kumo.html
+++ b/frontend/kumo.html
@@ -16,9 +16,9 @@
     <section>
             <nav>
                 <a class="village" href="./create.html" id="create">Add Character</a>
-                <a class="village" href="./konoha.html?village=Konoha"  id="konoha">Konoha</a>
-                <a class="village" href="./kumo.html?village=Kumo" id="kumo">Kumo</a>
-                <a class="village" href="./suna.html?village=Suna" id="suna">Suna</a>
+                <a class="village" href="./konoha.html?village=konoha"  id="konoha">Konoha</a>
+                <a class="village" href="./kumo.html?village=kumo" id="kumo">Kumo</a>
+                <a class="village" href="./suna.html?village=suna" id="suna">Suna</a>
             </nav>
     </section>
     <a id="back" href="index.html">
